--- a/views/food.erb
+++ b/views/food.erb
@@ -1,6 +1,6 @@
 <div id="food" class="">
    <h1><%= "Where do  you want to store your food?" %></h1>
    <a href="/food/fridge">Fridge</a>
-   <a href="#">Freezer</a>
-   <a href="#">Pantry</a>
+   <a href="/food/freezer">Freezer</a>
+   <a href="/food/pantry">Pantry</a>
 </div>
