--- a/views/new.erb
+++ b/views/new.erb
@@ -1,13 +1,17 @@
-<div class="">
+<div id="new" class="">
    <form action="/food/<%= params[:storage_type] %>" method="post">
-      <label for="add-food-item">Food Item</label>
-      <input type="text" name="" value="">
-      <label for="date-purchased">Date Purchased</label>
-      <input type="date" name="" value="2017-10-01">
+      <label for="food-item">Food Item</label>
+      <input type="text" name="item_name" value="">
+
+      <label for="purchase-date">Date Purchased</label>
+      <input type="date" name="purchase_date" value="">
+
       <label for="expiry-date">Expiry Date</label>
-      <input type="date" name="" value="">
-      <label for="date-purchased">Notify me before Expiry!</label>
-      <input type="date" name="" value="">
+      <input type="date" name="expiry_date" value="">
+
+      <label for="notification">Remind me on</label>
+      <input type="date" name="notification" value="">
+
       <button type="submit">Add Food</button>
    </form>
 </div>
