--- a/views/storage.erb
+++ b/views/storage.erb
@@ -3,11 +3,20 @@
    <a href="/food/<%= params[:storage_type] %>/new">Add some food now!</a>
 </div>
 
-<div class="">
-   <p>If fridge not empty, show all food in the fridge</p>
-   <a href="/food/<%= params[:storage_type] %>/new">Add more Food now!</a>
-   <a href="/food/<%= params[:storage_type] %>/edit">Edit Food</a>
-   <a href="/food/<%= params[:storage_type] %>/delete">Delete Food</a>
+<div id="all-food" class="">
+   <h1>Food in your <%= params[:storage_type] %></h1>
+   <% current_time = Time.new %>
+   <% @all_food.each do |item| %>
+   <article class="">
+      <img src="http://morganfillman.space/g/150/150" alt="">
+      <h3><a href="/food/<%= params[:storage_type] %>/<%= item.id %>"><%= item.item_name %></a></h3>
+      <% @days_left = (item.expiry_date - current_time.strftime("%Y-%m-%d").to_date).to_i.abs%>
+      <h4><%= "#{@days_left} days until food expires" %></h4>
+      <div class="">
+         <a href="/food/<%= params[:storage_type] %>/new">Add more food!</a>
+         <a href="/food/<%= params[:storage_type] %>/<%= item.id %>/edit">Edit</a>
+         <a href="/food/<%= params[:storage_type] %>/<%= item.id %>/delete">Delete</a>
+      </div>
+   </article>
+   <% end %>
 </div>
-
-<input type="date" name="" value="">
