--- a/views/login.erb
+++ b/views/login.erb
@@ -2,13 +2,25 @@
 <p><%= @message %></p>
 
 <form action="/session" method="post">
-   <label for="">Email</label>
-   <input type="text" name="email">
+  <label for="">Email</label>
+  <input type="text" name="email" required>
 
-   <label for="">Password</label>
-   <input type="password" name="password">
+  <label for="">Password</label>
+  <input type="password" name="password" required>
 
-   <button type="submit">Login</button>
+  <button type="submit">Login</button>
 </form>
 
-<h1>Create Signup Form and Routes</h1>
+<h1>Register</h1>
+<form action="/login" method="post">
+  <label for="">Name</label>
+  <input type="text" name="name" required>
+
+  <label for="">Email</label>
+  <input type="text" name="email" required>
+
+  <label for="">Password</label>
+  <input type="password" name="password" required>
+
+  <button type="submit">Register</button>
+</form>
