i thought i finished it...

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,9 @@
-<h1><%= "About Page" %></h1>
+<!-- about-page -->
+<div id="about" class="main-container">
+  <h1 class="main-title"><%= "About Page" %></h1>
+
+  <div class="">
+
+  </div>
+</div>
+<!-- end about-page -->
