--- a/views/food.erb
+++ b/views/food.erb
@@ -1,6 +1,31 @@
-<div id="food" class="">
-  <h1><%= "Where do  you want to store your food?" %></h1>
-  <a href="/food/fridge">Fridge</a>
-  <a href="/food/freezer">Freezer</a>
-  <a href="/food/pantry">Pantry</a>
+<!-- food-page -->
+<div id="food" class="main-container">
+  <h1 class="main-title"><%= "Where do you want to store your food?" %></h1>
+  <!-- view-fridge -->
+  <div class="view-fridge storage-type">
+    <div class="storage-type-image">
+      <img src="/img/storage_fridge.jpg" alt="">
+    </div>
+    <a href="/food/fridge">Fridge</a>
+  </div>
+  <!-- end view-fridge -->
+
+  <!-- view-freezer -->
+  <div class="view-freezer storage-type">
+    <div class="storage-type-image">
+      <img src="/img/storage_freezer.jpg" alt="">
+    </div>
+    <a href="/food/freezer">Freezer</a>
+  </div>
+  <!-- end view-freezer -->
+
+  <!-- view-pantry -->
+  <div class="view-pantry storage-type">
+    <div class="storage-type-image">
+      <img src="/img/storage_pantry.jpg" alt="">
+    </div>
+    <a href="/food/pantry">Pantry</a>
+  </div>
+  <!-- end view-pantry -->
 </div>
+<!-- end food-page -->
