--- a/views/guide.erb
+++ b/views/guide.erb
@@ -1,1 +1,5 @@
-<h1><%= "Don't have an expiry date on your food? You've come to the right place" %></h1>
+<!-- food-guide -->
+<div id="food-guide" class="main-container">
+  <h1 class="main-title"><%= "Don't have an expiry date on your food? You've come to the right place" %></h1>
+</div>
+<!-- end food-guide -->
