--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,180 @@
+*
+{
+  font-family: 'Pangolin', cursive;
+  -webkitbox-sizing: border-box;
+  -mozbox-sizing: border-box;
+  box-sizing: border-box;
+}
+
+a
+{
+  text-decoration: none;
+}
+
 body
 {
-   background: mistyrose;
+  background: lightskyblue;
+  margin: 0;
+}
+
+/* Header */
+header
+{
+  width: auto;
+  background: aquamarine;
+}
+
+.site-title
+{
+  text-align: center;
+  font-size: 60px;
+  margin: 0;
+  padding: 40px 0;
+}
+
+/* Main Menu */
+#nav
+{
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.menu-left
+{
+  width: 50%;
+  display: inline-block;
+}
+
+ul.main-menu
+{
+  width: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul.main-menu li
+{
+  padding: 5px 10px;
+  display: inline-block;
+  width: 11%;
+}
+
+.menu-right
+{
+  width: 30%;
+  display: inline-block;
+}
+
+.logged-in,
+.logout-button
+{
+  width: 45%;
+  display: inline-block;
+}
+
+/* Div Main Container */
+.main-container
+{
+  max-width: 1200px;
+  margin: 30px auto;
+  text-align: center;
+}
+
+.main-title
+{
+  font-size: 40px;
+}
+
+/* Home Page */
+.home-image
+{
+  max-width: 50%
+}
+
+.gif-container > a
+{
+  margin-top: 20px;
+}
+
+/* Food Page */
+.hidden
+{
+  display: none;
+}
+
+/* Storage Type View All Items */
+.storage-item-wrapper
+{
+  width: 25%;
+  display: inline-block;
+}
+
+/* Login/Register Page */
+.create-user-container
+{
+  width: 50%;
+  display: inline-block;
+}
+
+.login-container
+{
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.create-user-form,
+.login-form
+{
+  width: 80%;
+  display: inline-block;
+}
+
+.create-user-form input,
+.login-form input
+{
+  width: 100%;
+  text-align: center;
+}
+
+/* User Account Page */
+.user-food-item-wrapper
+{
+  width: 30%;
+  display: inline-block;
+}
+
+/* CRUD Forms */
+.create-form,
+.edit-form,
+.delete-form,
+{
+  width: 50%;
+  display: inline-block;
+}
+
+.create-form input,
+.edit-form input,
+.delete-form input,
+.create-user-form input,
+.login-form input
+{
+  width: 100%;
+  text-align: center;
+}
+
+.form-group
+{
+  margin: 10px auto;
+}
+
+/* Footer */
+footer
+{
+  margin-top: 20px;
+  padding: 20px 0;
+  width: auto;
+  text-align: center;
 }
