--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,25 +1,43 @@
-<% current_time = Time.new %>
-<% @days_left = (@food_item.expiry_date - current_time.strftime("%Y-%m-%d").to_date).to_i%>
+<!-- edit-item -->
+<div id="edit-item" class="main-container">
+  <h1 class="main-title">Edit <%= @food_item.item_name %></h1>
+  <p><%= @notification_error %></p>
 
-<form action="/food/<%= params[:storage_type] %>/<%= @food_item.id %>" method="post">
-  <input type="hidden" name="_method" value="put">
+  <form action="/food/<%= params[:storage_type] %>/<%= @food_item.id %>" method="post" class="edit-form">
+    <input type="hidden" name="_method" value="put">
+    <input type="hidden" name="days_left" value="<%= @days_left %>">
 
-  <label for="food-item">Food Item</label>
-  <input type="text" name="item_name" value="<%= @food_item.item_name %>">
+    <div class="form-group">
+      <label for="food-item">Food Item</label>
+      <input type="text" name="item_name" value="<%= @food_item.item_name %>" required>
+    </div>
 
-  <label for="purchase-date">Date Purchased</label>
-  <input type="date" name="purchase_date" value="<%= @food_item.purchase_date %>">
+    <div class="form-group">
+      <label for="purchase-date">Date Purchased</label>
+      <input type="date" name="purchase_date" value="<%= @food_item.purchase_date %>" required>
+    </div>
 
-  <label for="expiry-date">Expiry Date</label>
-  <input type="date" name="expiry_date" value="<%= @food_item.expiry_date %>">
+    <div class="form-group">
+      <label for="expiry-date">Expiry Date</label>
+      <input type="date" name="expiry_date" value="<%= @food_item.expiry_date %>" required>
+    </div>
 
-  <label for="notification">Remind me on</label>
-  <input type="date" name="notification" value="<%= @food_item.notification %>">
+    <div class="form-group">
+      <label for="notification">Remind me on</label>
+      <input type="date" name="notification" value="<%= @food_item.notification %>" required>
+    </div>
 
-  <% if @days_left > 0 %>
-    <label for="finished-food">I have consumed this food before it expired!</label>
-    <input type="checkbox" name="finished_food" value="checked">
-  <% end %>
+    <% if @days_left > 0 %>
+    <div class="form-group">
+      <label for="finished-food">I have consumed this food before it expired!</label>
+      <input type="checkbox" name="finished_food" value="checked">
+    </div>
+    <% end %>
 
-  <button type="submit">Update Food</button>
-</form>
+    <div class="form-group">
+      <button type="submit">Update Food</button>
+      <a href="javascript:history.back()">Back</a>
+    </div>
+  </form>
+</div>
+<!-- end edit-item -->
