--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,12 @@
 <!-- home-page -->
-<div id="home" class="">
-  <img src="http://morganfillman.space/300/500" alt="">
+<div id="home" class="main-container">
+  <img src="/img/food_pyramid.jpg" class="home-image" alt="Home">
 
   <% if !logged_in? %>
+  <div class="user-action-links">
     <a href="/login">Login</a>
     <a href="/login">Sign Up</a>
+  </div>
   <% end %>
 </div>
 <!-- end home-page -->
