--- a/views/storage.erb
+++ b/views/storage.erb
@@ -1,19 +1,26 @@
-<div class="">
-  <h1><%= "Your #{params[:storage_type]} is empty!" %></h1>
-  <img src="/img/empty-<%= params[:storage_type] %>.gif" alt="">
-  <a href="/food/<%= params[:storage_type] %>/new">Add some food now!</a>
-</div>
-
-<div id="all-food" class="">
-  <h1>Food in your <%= params[:storage_type] %></h1>
-  <% current_time = Time.new %>
-  <% @all_food.each do |item| %>
+<!-- no-food -->
+<div id ="no-food" class="main-container">
+  <h1 class="main-title"><%= "Your #{params[:storage_type]} is empty!" %></h1>
   <article class="">
+    <div class="gif-container">
+      <img class="no-food-gif" src="/img/empty_<%= params[:storage_type] %>.gif" alt="No Food">
+    </div>
+    <a href="/food/<%= params[:storage_type] %>/new">Add some food now!</a>
+  </article>
+</div>
+<!-- end no-food -->
+
+<!-- food-storage -->
+<div id="food-storage" class="main-container">
+  <h1 class="main-title">Food in your <%= params[:storage_type] %></h1>
+  <% @all_food.each do |item| %>
+  <% days_remaining_all = (item.expiry_date - new_time.strftime('%Y-%m-%d').to_date).to_i %>
+
+  <article class="storage-item-wrapper">
     <img src="http://morganfillman.space/g/150/150" alt="">
     <h3><a href="/food/<%= params[:storage_type] %>/<%= item.id %>"><%= item.item_name %></a></h3>
-    <% @days_left = (item.expiry_date - current_time.strftime("%Y-%m-%d").to_date).to_i%>
-    <h4><%= "#{@days_left} days until food expires" %></h4>
-      <div class="">
+    <h4><%= "#{days_remaining_all} days until food expires" %></h4>
+      <div class="item-actions">
         <a href="/food/<%= params[:storage_type] %>/new">Add more food!</a>
         <a href="/food/<%= params[:storage_type] %>/<%= item.id %>/edit">Edit</a>
         <a href="/food/<%= params[:storage_type] %>/<%= item.id %>/delete">Delete</a>
@@ -21,3 +28,4 @@
   </article>
   <% end %>
 </div>
+<!-- end food-storage -->
