--- a/views/error_page.erb
+++ b/views/error_page.erb
@@ -1,2 +1,9 @@
-<h1>You must be logged in to view this page</h1>
-<a href="/login">Log In</a>
+<!-- login-error-page -->
+<div id="login-error-page" class="main-container">
+  <h1>You must be logged in to view this page</h1>
+  <div class="">
+    <img src="/img/error_page.gif" alt="404 Error">
+  </div>
+  <a href="/login">Log In</a>
+</div>
+<!-- end login-error-page -->
