--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,17 +13,17 @@
   <nav id="nav">
     <div class="menu-left">
       <ul class="main-menu">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/">home</a></li>
+        <li><a href="/about">about</a></li>
 
         <% if logged_in? %>
-          <li><a href="/food">Food</a></li>
-          <li><a href="/food/fridge">Fridge</a></li>
-          <li><a href="/food/freezer">Freezer</a></li>
-          <li><a href="/food/pantry">Pantry</a></li>
+          <li><a href="/food">food</a></li>
+          <li><a href="/food/fridge">fridge</a></li>
+          <li><a href="/food/freezer">freezer</a></li>
+          <li><a href="/food/pantry">pantry</a></li>
         <% end %>
 
-        <li><a href="/guide">Guide</a></li>
+        <li><a href="/guide">guide</a></li>
       </ul>
     </div>
 
